changed Jasch's affiliation
git-svn-id: https://jamoma.svn.sourceforge.net/svnroot/jamoma/branches/active@5278 464221e2-0a0f-0410-983b-f8d57d210c17

--- a/Papers/SMC2009/Spatialization-SMC09.tex
+++ b/Papers/SMC2009/Spatialization-SMC09.tex
@@ -47,7 +47,7 @@
 % ---------------
 \oneauthor
    {Nils Peters$^{a}$, Trond Lossius$^{b}$, Jan Schacher$^{c}$, Pascal Baltazar$^{d}$, Charles Bascou$^{d}$, Timothy Place$^{f}$}
-   {$^{a}$CIRMMT, McGill University, Montr\'eal, nils.peters@mcgill.ca\\ $^{b}$BEK - Bergen Center for Electronic Arts, trond.lossius@bek.no\\ $^{c}$ICST, Zurich School of Music, Drama and Dance, jan.schacher@zhdk.ch \\ $^{d}$National Centre for Musical Creation of Albi/Marseille pb@gmea.net, charles.bascou@gmem.org \\ $^{f}$Cycling~'74, tim@cycling74.com} 
+   {$^{a}$CIRMMT, McGill University, Montr\'eal, nils.peters@mcgill.ca\\ $^{b}$BEK - Bergen Center for Electronic Arts, trond.lossius@bek.no\\ $^{c}$ICST, Zurich University of the Arts, jan.schacher@zhdk.ch \\ $^{d}$National Centre for Musical Creation of Albi/Marseille pb@gmea.net, charles.bascou@gmem.org \\ $^{f}$Cycling~'74, tim@cycling74.com} 
 %TODO : Could be nice to put GMEA and GMEM entire names, which are : GMEA/M National Centre for Musical Creation of Albi/Marseille. I know this is long, but at least the cities would be nice...
  
 
