fixing GMEA & GMEM
git-svn-id: https://jamoma.svn.sourceforge.net/svnroot/jamoma/branches/active@5282 464221e2-0a0f-0410-983b-f8d57d210c17

--- a/Papers/SMC2009/Spatialization-SMC09.tex
+++ b/Papers/SMC2009/Spatialization-SMC09.tex
@@ -46,8 +46,8 @@
 % To use with only one author or several with the same address
 % ---------------
 \oneauthor
-   {Nils Peters$^{a}$, Trond Lossius$^{b}$, Jan Schacher$^{c}$, Pascal Baltazar$^{d}$, Charles Bascou$^{d}$, Timothy Place$^{e}$}
-   {$^{a}$ CIRMMT, McGill University, Montr\'eal, nils.peters@mcgill.ca\\ $^{b}$ BEK - Bergen Center for Electronic Arts, trond.lossius@bek.no\\ $^{c}$ ICST, Zurich University of the Arts, jan.schacher@zhdk.ch \\ $^{d}$ National Centre for Musical Creation of Albi/Marseille pb@gmea.net, charles.bascou@gmem.org \\ $^{e}$ Cycling~'74, tim@cycling74.com} 
+   {Nils Peters$^{a}$, Trond Lossius$^{b}$, Jan Schacher$^{c}$, Pascal Baltazar$^{d}$, Charles Bascou$^{e}$, Timothy Place$^{f}$}
+   {$^{a}$ CIRMMT, McGill University, Montr\'eal, nils.peters@mcgill.ca\\ $^{b}$ BEK - Bergen Center for Electronic Arts, trond.lossius@bek.no\\ $^{c}$ ICST, Zurich University of the Arts, jan.schacher@zhdk.ch \\ $^{d}$ GMEA - National Centre for Musical Creation of Albi, pb@gmea.net\\ $^{e}$ GMEM - National Centre for Musical Creation of Marseille, charles.bascou@gmem.org \\ $^{f}$ Cycling~'74, tim@cycling74.com} 
 %TODO : Could be nice to put GMEA and GMEM entire names, which are : GMEA/M National Centre for Musical Creation of Albi/Marseille. I know this is long, but at least the cities would be nice...
  
 
@@ -205,7 +205,7 @@ A variety of powerful stand-alone spatialization systems are in development, ran
 When dealing with spatialization in electroacoustic composition or linear sound editing, the workflow comprises a number of steps in order to construct, shape and realize the spatial qualities of the work. The creative workflow might appear to be different when working on audio installations or interactive/multimedia work. Still, we identified underlying common elements when spatialization is used. For this reason a stratified approach, where the required processes are organized according to levels of abstraction is proposed.
 
 This model is inspired by the Open Systems Interconnection network model (OSI) \footnote{\url{http://en.wikipedia.org/wiki/OSI_model}}, which is an abstract description for layered communications and computer network protocol design. OSI divides network architecture into seven layers that range from top to bottom between the Application and Physical Layers. Each OSI-layer contains a collection of conceptually similar functionalities that provide services to the layer above it and receives services from the layer below it. \\
-\indent As depicted in Figure \ref{fig:layers}, six layers have been identified in our model. %The adaptation of concepts originally designed for network protocols to computer music systems was legitimized, for instance, in creating the popular Open Sound Control (OSC) protocol \cite{wright1997osc}.   
+\indent As depicted in Figure \ref{fig:layers}, six layers have been defined in our model. %The adaptation of concepts originally designed for network protocols to computer music systems was legitimized, for instance, in creating the popular Open Sound Control (OSC) protocol \cite{wright1997osc}.   
 % TODO Tim proposes to cut the previous paragraph -- I don't think it adds anything...
 	\begin{figure}
 		[ht] \centerline{\framebox{ 
